--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-select": "^5.8.0",
+    "react-to-print": "^2.15.1",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
