--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -31,6 +31,7 @@
       "@assets/*": ["src/assets/*"],
       "@store/*": ["src/store/*"],
       "@utils/*": ["src/utils/*"],
+      "@reports/*": ["src/reports/*"],
       "@datatypes/*": ["src/types/*"]
     }
   },
