--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
