--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.2.2",
     "apexcharts": "^3.49.0",
     "axios": "^1.6.8",
+    "phil-reg-prov-mun-brgy": "^1.1.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-data-table-component": "^7.6.2",
