--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "php-open-source-saver/jwt-auth": "^2.2"
+        "php-open-source-saver/jwt-auth": "^2.2",
+        "twilio/sdk": "^8.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
