--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "php-open-source-saver/jwt-auth": "^2.2",
-        "twilio/sdk": "^8.1"
+        "twilio/sdk": "^8.1",
+        "vonage/client": "^4.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
